contour-examples/httpd-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: httpd
  replicas: 2
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: servicerouting.azurecr.io/sr/httpd
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
  labels:
    app: httpd
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpd
  type: ClusterIP
