contour-examples/httpd-weighted-routing.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpproxy-wr
spec:
  virtualhost:
    fqdn: wr.USERX.sr.globalbanque.com
  routes:
    - services:
        - name: nginx
          port: 80
          weight: 10
        - name: httpd
          port: 80
          weight: 90
